--- a/WHManager.DesktopUI/Views/FormViews/ManageProductFormView.xaml
+++ b/WHManager.DesktopUI/Views/FormViews/ManageProductFormView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WHManager.DesktopUI.Views.FormViews.AddProductFormView"
+﻿<Window x:Class="WHManager.DesktopUI.Views.FormViews.ManageProductFormView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,7 +25,7 @@
 
         <TextBlock Grid.Row="0">Nazwa</TextBlock>
         <TextBlock Grid.Row="1">Typ</TextBlock>
-        <TextBlock Grid.Row="2">Product</TextBlock>
+        <TextBlock Grid.Row="2">Producent</TextBlock>
         <TextBlock Grid.Row="3">Podatek</TextBlock>
         <TextBlock Grid.Row="4">Cena kupna</TextBlock>
         <TextBlock Grid.Row="5">Cena sprzedaży</TextBlock>
