--- a/WHManager.DesktopUI/Views/FormViews/ManageTaxFormView.xaml
+++ b/WHManager.DesktopUI/Views/FormViews/ManageTaxFormView.xaml
@@ -23,9 +23,10 @@
 
         <TextBlock>Nazwa</TextBlock>
         <TextBlock Grid.Row="1">Wartość</TextBlock>
-        <Label Grid.Row="2" Visibility="Hidden" x:Name="Id"></Label>
+        
         <TextBox Grid.Column="1" x:Name="textBoxTaxName"></TextBox>
-        <TextBox Grid.Column="2" x:Name="textBoxTaxValue"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1" x:Name="textBoxTaxValue"></TextBox>
+        <Label Grid.Row="2" Visibility="Hidden" x:Name="Id"></Label>
         <Button Grid.Column="1" Grid.Row="2" Click="AddTaxClick">Zatwierdź</Button>
     </Grid>
 </Window>
