--- a/WHManager.DesktopUI/Views/ContractorView.xaml
+++ b/WHManager.DesktopUI/Views/ContractorView.xaml
@@ -7,6 +7,19 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock>eqweqweqweqweqw</TextBlock>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <Button Grid.Column="0" Width="100" Click="ManufacturersViewClick">Producenci</Button>
+        <Button Grid.Column="1" Width="100" Click="ClientsTypeViewClick">Klienci</Button>
+        <ContentControl Grid.Row="1" Grid.ColumnSpan="4" x:Name="contractorsContent"></ContentControl>
     </Grid>
 </UserControl>
