--- a/WHManager.DesktopUI/Views/BusinessViews/OrderView.xaml
+++ b/WHManager.DesktopUI/Views/BusinessViews/OrderView.xaml
@@ -26,7 +26,7 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Nazwa klienta" Binding="{Binding Client.Name}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Data złożenia" Binding="{Binding DateIssued}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Data złożenia" Binding="{Binding DateOrdered.Date}"></DataGridTextColumn>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
