--- a/WHManager.DesktopUI/Views/BusinessViews/DeliveryView.xaml
+++ b/WHManager.DesktopUI/Views/BusinessViews/DeliveryView.xaml
@@ -63,6 +63,37 @@
             <Setter Property="FontSize" Value="18"/>
         </Style>
 
+        <Style TargetType="Button" x:Key="ButtonsToDisable">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Arrow" />
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Background" Value="#1565c0"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" BorderThickness="0" BorderBrush="Black" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Foreground" Value="Silver"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Background" Value="Gray" />
+                                <Setter Property="Foreground" Value="Black" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Realized}" Value="True">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -105,15 +136,21 @@
                 <!--Textblocks-->
                 <TextBlock Grid.Row="0" Grid.Column="1">ID zamówienia:</TextBlock>
                 <TextBlock Grid.Row="0" Grid.Column="2">Nazwa dostawcy:</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="3">Realizacja:</TextBlock>
                 <TextBlock Grid.Row="0" Grid.Column="1" Visibility="Hidden">Nazwa dostawcy:</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="1">Od:</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="2">Do:</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="1">Od: (Data złożenia)</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="2">Do: (Data złożenia)</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="1">Od: (Data zrealizowania)</TextBlock>
+                <TextBlock Grid.Row="4" Grid.Column="2">Do: (Data zrealizowania)</TextBlock>
                 <!--Controls-->
                 <TextBox Name="textBoxDeliveryId" Grid.Row="1" Grid.Column="1"></TextBox>
                 <TextBox Name="textBoxProviderName" Grid.Row="1" Grid.Column="2"></TextBox>
+                <ComboBox Name="comboBoxRealized" Grid.Column="3" Grid.Row="1"></ComboBox>
                 <TextBox Grid.Row="3" Grid.Column="1"  Visibility="Hidden"></TextBox>
-                <DatePicker Grid.Column="1" Grid.Row="3" x:Name="datePickerEarlierDate"></DatePicker>
-                <DatePicker Grid.Column="2" Grid.Row="3" x:Name="datePickerLaterDate"></DatePicker>
+                <DatePicker Grid.Column="1" Grid.Row="3" x:Name="datePickerEarlierDateOrdered"></DatePicker>
+                <DatePicker Grid.Column="2" Grid.Row="3" x:Name="datePickerLaterDateOrdered"></DatePicker>
+                <DatePicker Grid.Column="1" Grid.Row="5" x:Name="datePickerEarlierDateRealized"></DatePicker>
+                <DatePicker Grid.Column="2" Grid.Row="5" x:Name="datePickerLaterDateRealized"></DatePicker>
             </Grid>
             <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
@@ -138,20 +175,22 @@
                       CellStyle="{StaticResource Body_Content_DataGrid_Centering}"
                       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="gridDeliveries">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" Binding="{Binding Id}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="30" Header="ID" Binding="{Binding Id}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Nazwa klienta" Binding="{Binding Provider.Name}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Data złożenia" Binding="{Binding DateOfArrival}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="100" Header="Data złożenia" Binding="{Binding DateCreated, StringFormat=\{0:yyyy-MM-dd\}}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="100" Header="Data zrealizowania" Binding="{Binding DateRealized, StringFormat=\{0:yyyy-MM-dd\}}"></DataGridTextColumn>
+                    <DataGridCheckBoxColumn Width="70" Header="Zrealizowane" x:Name="Realized" Binding="{Binding Realized}"></DataGridCheckBoxColumn>
                     <DataGridTemplateColumn Width="50">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource ButtonStyle}" Click="UpdateDeliveryClick" Width="50">Edytuj</Button>
+                                <Button Style="{StaticResource ButtonsToDisable}" Click="UpdateDeliveryClick" Width="50">Edytuj</Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn Width="50">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource ButtonStyle}" Click="DeleteDeliveryClick" Width="50">Usuń</Button>
+                                <Button Style="{StaticResource ButtonsToDisable}" Click="DeleteDeliveryClick" Width="50">Usuń</Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -159,8 +198,9 @@
                 </DataGrid.Columns>
                 <DataGrid.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Header="Wyświetl przedmioty" Click="gridProductDisplayItems"></MenuItem>
-                        <MenuItem Header="Wyświetl dokument przychodzący" Click="gridProductGeneratePz"></MenuItem>
+                        <MenuItem Header="Zrealizuj zamówienie" Click="gridDeliveryRealizeDelivery"></MenuItem>
+                        <MenuItem Header="Wyświetl przedmioty" Click="gridDeliveryDisplayItems"></MenuItem>
+                        <MenuItem Header="Wyświetl dokument przychodzący" Click="gridDeliveryGeneratePz"></MenuItem>
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
